wrap long unbroken metadata text to prevent overflow

--- a/app/styles/_metadata-block.scss
+++ b/app/styles/_metadata-block.scss
@@ -53,6 +53,7 @@
 
 .meta-block__defin {
   margin: 0 0 $layout-container-margin-md 0;
+  overflow-wrap: break-word;
 
   @include bp(sm-screen) {
     float: left;
